--- a/opmaak.css
+++ b/opmaak.css
@@ -5,12 +5,12 @@ ul {
     padding: 0;
   }
   body {
-    background-color: lightblue;
+    background-color: darkblue
   }
   
   h1 {
     color: white;
-    text-align: center;
+    text-align: left;
   }
   
   p {
