--- a/opmaak.css
+++ b/opmaak.css
@@ -1,20 +1,33 @@
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  body {
-    background-color: darkblue
-  }
-  
-  h1 {
-    color: white;
-    text-align: left;
-  }
-  
-  p {
-    font-family: verdana;
-    font-size: 20px;
-  }
+
+body, ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+/* Stijlen voor het navigatiemenu */
+nav {
+  background-color: #333;
+}
+
+nav ul {
+  display: flex;
+  justify-content: center;
+  padding: 10px 0;
+}
+
+nav li {
+  margin: 0 20px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  transition: color 0.3s;
+}
+
+nav a:hover {
+  color: #ff5722;
+}
