--- a/opmaak.css
+++ b/opmaak.css
@@ -8,7 +8,7 @@ body, ul {
 
 /* Stijlen voor het navigatiemenu */
 nav {
-  background-color: #333;
+  background-color: blue;
 }
 
 nav ul {
@@ -23,7 +23,7 @@ nav li {
 
 nav a {
   text-decoration: none;
-  color: #fff;
+  color: black;
   font-weight: bold;
   transition: color 0.3s;
 }
