--- a/opmaak.css
+++ b/opmaak.css
@@ -1,4 +1,42 @@
-/* This is a CSS comment */
-body{
-  background-color: aqua;
-}
+
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Mijn Website</title>
+    <style>
+        /* Stijl het menu */
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            background-color: #333;
+            overflow: hidden;
+        }
+
+        li {
+            float: left;
+        }
+
+        li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        li a:hover {
+            background-color: #555555;
+        }
+    </style>
+</head>
+<body>
+  
+
+    <!-- Hier kun je de inhoud van elke pagina toevoegen -->
+    <div id="home">
+        <h1>Welkom op mijn website</h1>
+        <p>Dit is de startpagina van onze website.</p>
+    </div>
+
+</html>
