--- a/opmaak.css
+++ b/opmaak.css
@@ -1,26 +1,32 @@
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    background-color: #600;
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+h1 {
+  background-color: green;
 }
 
-li {
-  float: left;
+div {
+  background-color: lightblue;
 }
 
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-} 
+p {
+  background-color: yellow;
+}
+</style>
+</head>
+<body>
 
-/* Change the link color to #111 (black) on hover */
-li a:hover {
-    background-color: #111;
-} 
+<h1></h1>
+<div>
+
+</div>
+
+</body>
+</html>
+
+
+
     
 
 
