--- a/opmaak.css
+++ b/opmaak.css
@@ -7,7 +7,7 @@
       background-color: #483D8B;
     } 
 
-   li {float: left;} /zorgt ervoor dat het menu aaan de linker kant begint/
+   li {float: left;} /* zorgt ervoor dat het menu aaan de linker kant begint*/
     
     li a {
       display: block; /* zorgt voor menu in blok vorm*/
