--- a/opmaak.css
+++ b/opmaak.css
@@ -16,6 +16,11 @@
       padding: 18px 18px;
       text-decoration: none;
     }
+.tekst {
+  position: relative;
+  top: 20px;
+  left: 30px;
+}
 
 
 
