--- a/opmaak.css
+++ b/opmaak.css
@@ -16,13 +16,32 @@
       padding: 18px 18px;
     } 
 
-    /Dit is de opmaak voor de tekst op de homepage/
+    /achtergrond plaatje voor de homepage/
+
+  #tekst1{
+    font-family: Lucida, Monospace;
+    color: White;
+    border-radius: 25px; /maakt de afbeelding rond/
+    background: #483D8B;
+    border-style: inset; /De border om de tekst heen/
+    width: 500px; /aanpassingen voor de breedte/
+    padding-bottom: 100px;
+    padding-top: 100px;
+    padding-left: 50px;
+    padding-right: 40px;
+    margin: 100px; /aanpassingen voor de grootte/
+  {
+
+/Dit is de opmaak voor de tekst op de homepage/
 
   h1{
     font-family: Lucida, Monospace;
     color: White;
     font-size: 20px; /grootte van de tekst/
-  {
+  }
+/Dit is de opmaak van de titel "Wat is het binaire stelsel?/
+
+
     
     
     
