--- a/opmaak.css
+++ b/opmaak.css
@@ -38,7 +38,7 @@
     font-family: Lucida, Monospace;
     color: White;
     font-size: 20px; /grootte van de tekst/
-  }
+  {
 /Dit is de opmaak van de titel "Wat is het binaire stelsel?/
 
 
