--- a/opmaak.css
+++ b/opmaak.css
@@ -4,7 +4,7 @@
       margin: 0;
       padding: 0;
       overflow: hidden;
-      background-color: #483D8B;
+      background: color #700;
     } 
 
    li {float: left;} /* zorgt ervoor dat het menu aaan de linker kant begint*/
