--- a/opmaak.css
+++ b/opmaak.css
@@ -22,7 +22,7 @@
     font-family: Lucida, Monospace;
     color: White;
     border-radius: 25px; /maakt de afbeelding rond/
-    background: #483D8B;
+    background:background-color:blue:
     border-style: inset; /De border om de tekst heen/
     width: 500px; /aanpassingen voor de breedte/
     padding-bottom: 100px;
@@ -39,7 +39,7 @@
     color: White;
     font-size: 20px; /grootte van de tekst/
   {
-/Dit is de opmaak van de titel "Wat is het binaire stelsel?/
+/Dit is de opmaak van de titel "Wat is het binaire stelsel'?/
 
 
     
