--- a/opmaak.css
+++ b/opmaak.css
@@ -16,23 +16,8 @@
       padding: 18px 18px;
     } 
 
-    /achtergrond plaatje voor de homepage/
 
-  #tekst1{
-    font-family: Lucida, Monospace;
-    color: White;
-    border-radius: 25px; /maakt de afbeelding rond/
-    background:background-color:blue:
-    border-style: inset; /De border om de tekst heen/
-    width: 500px; /aanpassingen voor de breedte/
-    padding-bottom: 100px;
-    padding-top: 100px;
-    padding-left: 50px;
-    padding-right: 40px;
-    margin: 100px; /aanpassingen voor de grootte/
-  {
-
-/Dit is de opmaak voor de tekst op de homepage/
+::after is de opmaak voor de tekst op de homepage/
 
   h1{
     font-family: Lucida, Monospace;
