--- a/opmaak.css
+++ b/opmaak.css
@@ -4,7 +4,7 @@
       margin: 0;
       padding: 0;
       overflow: hidden;
-      background: color #483D8B;
+      background: #00C9FF;
 }
 
    li {float: left;} /* zorgt ervoor dat het menu aaan de linker kant begint*/
