--- a/opmaak.css
+++ b/opmaak.css
@@ -16,6 +16,20 @@
       padding: 18px 18px;
       text-decoration: none;
     }
+
+ #tekst1{
+    font-family: Lucida, Monospace;
+    color: White;
+    border-radius: 25px; /maakt de afbeelding rond/
+    background: #483D8B;
+    border-style: inset; /De border om de tekst heen/
+    width: 500px; /aanpassingen voor de breedte/
+    padding-bottom: 100px;
+    padding-top: 100px;
+    padding-left: 50px;
+    padding-right: 40px;
+    margin: 100px; /aanpassingen voor de grootte/
+  }
    
     h1{
       font-family: Lucida, Monospace;
