--- a/opmaak.css
+++ b/opmaak.css
@@ -15,7 +15,11 @@
       text-align: center;
       padding: 18px 18px;
       text-decoration: none;
-    }
+    } 
+
+#body1{background-image:url("sreenshot_color_nl.jpg");}
+
+
 
  #tekst1{
     font-family: Lucida, Monospace;
