--- a/opmaak.css
+++ b/opmaak.css
@@ -37,7 +37,7 @@
    
     h1{
       font-family: Lucida, Monospace;
-      color: White;
+      color: #000080;
       font-size: 20px; /grootte van de tekst/
     }
 
