--- a/opmaak.css
+++ b/opmaak.css
@@ -24,7 +24,7 @@
 
 
  #tekst1{
-    font-family: Lucida, Monospace;
+    font-family: Arial, sans-serif;
     color: #000;
     border-radius: 25px; /maakt de afbeelding rond/
     background: #483D8B;
