--- a/opmaak.css
+++ b/opmaak.css
@@ -47,7 +47,7 @@
  {
   background-color:rgba(32, 165, 242, 0.996); 
   background-image: url('seguridad-informatica-scaled.jpeg'); /* Vervang 'achtergrond.jpg' door het pad naar je eigen afbeelding */
-  background-size:contain;
+  background-size:50% 50%;
   background-attachment: fixed;
   font-family: Arial, sans-serif;
  }
