--- a/opmaak.css
+++ b/opmaak.css
@@ -38,7 +38,7 @@
   }
    
     h1{
-      font-family: Lucida, Monospace;
+      font-family: Arial, sans-serif;
       color: #000;
       font-size: 20px; /grootte van de tekst/
     }
