--- a/opmaak.css
+++ b/opmaak.css
@@ -5,7 +5,7 @@
       padding: 0;
       overflow: hidden;
       background-color: rgb(12, 100, 159);
-      font-size: Arial, sans-serif ;
+      font-family: Arial, sans-serif ;
 }
 
    li {float: left;} /* zorgt ervoor dat het menu aaan de linker kant begint*/
