--- a/opmaak.css
+++ b/opmaak.css
@@ -54,13 +54,17 @@
 
 .home
  {
-  background-color:rgba(32, 165, 242, 0.996); } /zorgt voor een achtergrond kleur/
-  background-image:url('seguridad-informatica-scaled.jpeg');
-  background-blur: blur(5px); /* Vervaging toepassen op de achtergrondafbeelding */
-  padding: 20px; /* Voeg wat ruimte toe rond de tekst */
-  color: white; /* Tekstkleur aanpassen voor contrast */
+   position: relative;
+    background-image: url('seguridad-informatica-scaled.jpeg'); /* Voeg hier je achtergrondafbeelding toe */
+    background-size: cover;
+    background-blur: blur(5px); /* Vervaging toepassen op de achtergrondafbeelding */
+    padding: 20px; /* Voeg wat ruimte toe rond de tekst */
+    color: rgb(0, 0, 0); /* Tekstkleur aanpassen voor contrast */
+}
+
   
- }
+  
+ 
  
  
 
