--- a/opmaak.css
+++ b/opmaak.css
@@ -54,12 +54,12 @@
 
 .home
  {
-   position: relative;
-    background-image: url('seguridad-informatica-scaled.jpeg'); /* Voeg hier je achtergrondafbeelding toe */
-    background-size: cover;
-    background-blur: blur(5px); /* Vervaging toepassen op de achtergrondafbeelding */
-    padding: 20px; /* Voeg wat ruimte toe rond de tekst */
-    color: rgb(0, 0, 0); /* Tekstkleur aanpassen voor contrast */
+  background-image: url('seguridad-informatica-scaled.jpeg'); /* Voeg hier je achtergrondafbeelding toe */
+  position: relative;
+  background-size: cover;
+  background-clip: blur(5px); /* Vervaging toepassen op de achtergrondafbeelding */
+  padding: 20px; /* Voeg wat ruimte toe rond de tekst */
+  color: rgb(0, 0, 0); /* Tekstkleur aanpassen voor contrast */
 }
 
   
