--- a/opmaak.css
+++ b/opmaak.css
@@ -60,7 +60,7 @@
   color: rgb(0, 0, 0); /* Tekstkleur aanpassen voor contrast */
 }
 
-footer {
+.footer {
   background-color: #e8a362;
   color: #fff;
   text-align: center;
