--- a/opmaak.css
+++ b/opmaak.css
@@ -56,7 +56,7 @@
  {
   background-image: url('seguridad-informatica-scaled.jpeg'); /* Voeg hier je achtergrondafbeelding toe */
   background-size: cover;
-  background-clip: blur(5px); /* Vervaging toepassen op de achtergrondafbeelding */
+  filter: blur(5px); /* Vervaging toepassen op de achtergrondafbeelding */
   color: rgb(0, 0, 0); /* Tekstkleur aanpassen voor contrast */
 }
 
