--- a/opmaak.css
+++ b/opmaak.css
@@ -59,7 +59,7 @@
 
 .footer {
   background-color: #e8a362; 
-  color: #fff;
+  color: #000000;
   text-align: center;
   padding: 20px;
   bottom: 0;
