--- a/opmaak.css
+++ b/opmaak.css
@@ -64,6 +64,11 @@
   padding: 20px;
   bottom: 0;
 }
+.menu li:hover {
+  background-color: #3498db; /* Achtergrondkleur bij hover */
+  color: #fff; /* Tekstkleur bij hover */
+}
+
 
   
   
