--- a/opmaak.css
+++ b/opmaak.css
@@ -65,7 +65,7 @@
   bottom: 0;
 }
 .menu li:hover {
-  background-color: #3498db; /* Achtergrondkleur bij hover */
+  background-color: #eefa44; /* Achtergrondkleur bij hover */
   color: #fff; /* Tekstkleur bij hover */
 }
 
