--- a/opmaak.css
+++ b/opmaak.css
@@ -66,7 +66,7 @@
 }
 .menu li:hover {
   background-color: #eefa44; /* Achtergrondkleur bij hover */
-  color: #fff; /* Tekstkleur bij hover */
+  color: #000000; /* Tekstkleur bij hover */
 }
 
 
