--- a/opmaak.css
+++ b/opmaak.css
@@ -65,7 +65,7 @@
   bottom: 0;
 }
 .menu li:hover {
-  background-color: #eefa44; /* Achtergrondkleur bij hover */
+  background-color: #c909f9; /* Achtergrondkleur bij hover */
   color: #000000; /* Tekstkleur bij hover */
 }
 
