--- a/opmaak.css
+++ b/opmaak.css
@@ -58,12 +58,22 @@
   background-color:rgba(32, 165, 242, 0.996); / achtergrond kleur homepage/
 }
 
-.footer {
-  background-color: #e8a362; 
-  color: #000000;
+
+.header {
+  background-color: #333;
+  color: #fff;
   text-align: center;
-  bottom: 0;
+  padding: 20px;
 }
+
+.footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 10px 0;
+}
+
+
 .menu li:hover {
   background-color: #c909f9; /* Achtergrondkleur bij hover */
   color: #000000; /* Tekstkleur bij hover */
