--- a/opmaak.css
+++ b/opmaak.css
@@ -60,14 +60,13 @@
 
 
 .header {
-  background-color: #333;
+  background-color: #ffffff;
   color: #fff;
   text-align: center;
-  padding: 20px;
 }
 
 .footer {
-  background-color: #333;
+  background-color: #f6b3dc;
   color: #fff;
   text-align: center;
   padding: 10px 0;
