--- a/opmaak.css
+++ b/opmaak.css
@@ -75,7 +75,7 @@
 
 .menu li:hover {
   background-color: #c909f9; /* Achtergrondkleur bij hover */
-  color: #000000; /* Tekstkleur bij hover */
+  color: #ffffff; /* Tekstkleur bij hover */
 }
 
 img {
