--- a/opmaak.css
+++ b/opmaak.css
@@ -53,9 +53,13 @@
 
   
 
-.home
- { 
-  background-color:rgba(32, 165, 242, 0.996); / achtergrond kleur homepage/
+  #content {
+    background-image: url('achtergrondafbeelding.jpg'); /* Voeg hier het pad naar je afbeelding toe */
+    background-size: cover; /* Afbeelding schaalt om het hele content-gedeelte te bedekken */
+    background-repeat: no-repeat; /* Voorkomt herhaling van de achtergrondafbeelding */
+    background-attachment: fixed; /* Houdt de afbeelding op zijn plaats terwijl je door de pagina scrollt */
+    color: #fff; /* Tekstkleur op de achtergrondafbeelding om leesbaarheid te garanderen */
+
 }
 
 
