--- a/opmaak.css
+++ b/opmaak.css
@@ -54,7 +54,7 @@
   
 
   #content {
-    background-image: url('achtergrondafbeelding.jpg'); /* Voeg hier het pad naar je afbeelding toe */
+    background-image: url('seguridad-informatica-scaled.jpeg'); /* Voeg hier het pad naar je afbeelding toe */
     background-size: cover; /* Afbeelding schaalt om het hele content-gedeelte te bedekken */
     background-repeat: no-repeat; /* Voorkomt herhaling van de achtergrondafbeelding */
     background-attachment: fixed; /* Houdt de afbeelding op zijn plaats terwijl je door de pagina scrollt */
