--- a/opmaak.css
+++ b/opmaak.css
@@ -65,7 +65,7 @@
 
 .footer {
   background-color: #f6b3dc;
-  color: #fff;
+  color:rgba(32, 165, 242, 0.996);
   text-align: center;
   padding: 0;
 }
