--- a/opmaak.css
+++ b/opmaak.css
@@ -49,19 +49,12 @@
       font-family: Arial, sans-serif;
       color: #000;
       font-size: 18px; / grootte van de tweede kop/
-    }
-
-  
-
-  #content {
-    background-image: url('seguridad-informatica-scaled.jpeg'); /* Voeg hier het pad naar je afbeelding toe */
-    background-size: cover; /* Afbeelding schaalt om het hele content-gedeelte te bedekken */
-    background-repeat: no-repeat; /* Voorkomt herhaling van de achtergrondafbeelding */
-    background-attachment: fixed; /* Houdt de afbeelding op zijn plaats terwijl je door de pagina scrollt */
-    color: #fff; /* Tekstkleur op de achtergrondafbeelding om leesbaarheid te garanderen */
-
-}
-
+    
+    
+. background-image: url('seguridad-informatica-scaled.jpeg');
+        background-size: cover;
+        background-position: center;
+      }
 
 .footer {
   background-color: #f6b3dc;
