--- a/opmaak.css
+++ b/opmaak.css
@@ -49,12 +49,17 @@
       font-family: Arial, sans-serif;
       color: #000;
       font-size: 18px; / grootte van de tweede kop/
-    
-    
-. background-image: url('seguridad-informatica-scaled.jpeg');
+
+    .home {
+        background-image: url('seguridad-informatica-scaled.jpeg');
         background-size: cover;
         background-position: center;
+        background-attachment: fixed; /* Hiermee wordt de achtergrondafbeelding vastgezet, zodat deze niet scrollt */
+        margin: 0; /* Verwijder standaardmarges om de afbeelding te maximaliseren */
+        padding: 0; /* Verwijder standaardvullingen om de afbeelding te maximaliseren */
       }
+
+
 
 .footer {
   background-color: #f6b3dc;
