--- a/opmaak.css
+++ b/opmaak.css
@@ -48,16 +48,14 @@
     h2{
       font-family: Arial, sans-serif;
       color: #000;
-      font-size: 18px; / grootte van de tweede kop/
-
-    .home {
-        background-image: url('seguridad-informatica-scaled.jpeg');
-        background-size: cover;
-        background-position: center;
-        background-attachment: fixed; /* Hiermee wordt de achtergrondafbeelding vastgezet, zodat deze niet scrollt */
-      }
-
-
+      font-size: 18px;
+    }
+.home {
+  background-image: url('seguridad-informatica-scaled.jpeg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed; /* Hiermee wordt de achtergrondafbeelding vastgezet, zodat deze niet scrollt */
+}
 
 .footer {
   background-color: #f6b3dc;
