--- a/opmaak.css
+++ b/opmaak.css
@@ -60,7 +60,7 @@
 
 .footer{
   color: White;
-  background-color: #483D8B;
+  background-color:  rgb(12, 100, 159);
   width: 100%;
   text-align: center; /tekst begint vanuit het midden/
   bottom: 100%;
