--- a/opmaak.css
+++ b/opmaak.css
@@ -26,7 +26,7 @@
 
  #tekst1{
     font-family: Arial, sans-serif;
-    background-color: #ffffff;
+    background-color: #fc9fef;
     color: #000;
     border-radius: 25px; /maakt de afbeelding rond/
     background: #483D8B;
