--- a/opmaak.css
+++ b/opmaak.css
@@ -76,7 +76,7 @@ img {
   height: auto; /* behoud de oorspronkelijke hoogte-breedteverhouding */
 }
 
-.background
+#tekst2
 {
 font-family: Arial, sans-serif;
 color: #000;
