--- a/opmaak.css
+++ b/opmaak.css
@@ -79,7 +79,7 @@ img {
 #tekst2
 {
 font-family: Arial, sans-serif;
-color: #000;
+color: #ee0909;
 border-radius: 25px; /maakt de afbeelding rond/
 background: #483D8B;
 border-style: inset; /De border om de tekst heen/
