--- a/opmaak.css
+++ b/opmaak.css
@@ -82,6 +82,7 @@ font-family: Arial, sans-serif;
 color: #ee0909;
 border-radius: 25px; /maakt de afbeelding rond/
 background: #483D8B;
+background-color: rgb(255, 255, 255);
 border-style: inset; /De border om de tekst heen/
 width: 500px; /aanpassingen voor de breedte/
 padding-bottom: 100px;
