--- a/opmaak.css
+++ b/opmaak.css
@@ -79,10 +79,10 @@ img {
 #tekst2
 {
 font-family: Arial, sans-serif;
-color: #ee0909;
+color: #000000;
 border-radius: 25px; /maakt de afbeelding rond/
 background: #483D8B;
-background-color: rgb(255, 255, 255);
+background-color: rgb(131, 158, 232);
 border-style: inset; /De border om de tekst heen/
 width: 500px; /aanpassingen voor de breedte/
 padding-bottom: 100px;
