--- a/layout.css
+++ b/layout.css
@@ -2,7 +2,7 @@
 #ul2
 /* Dropdown Button */
 .dropbtn {
-    background-color: #3498DB;
+    background-color: rgb(12, 100, 159;
     color: white;
     padding: 16px;
     font-size: 16px;
