--- a/opmaak.css
+++ b/opmaak.css
@@ -73,7 +73,7 @@
 
 img {
   width: 25%;
-  height: auto; /* behoud de oorspronkelijke hoogte-breedteverhouding */
+  height: 100px; /* behoud de oorspronkelijke hoogte-breedteverhouding */
 }
 
 #tekst2
