--- a/opmaak.css
+++ b/opmaak.css
@@ -72,8 +72,8 @@
 }
 
 img {
-  width: 70%;
-  height: 240px; /* behoud de oorspronkelijke hoogte-breedteverhouding */
+  width: 50%;
+  height: 300px; 
 }
 
 #tekst2
