--- a/layout.css
+++ b/layout.css
@@ -1,21 +1,3 @@
-.third-level-menu
-{
-    position: absolute;
-    top: 0;
-    right: -150px;
-    width: 150px;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: none;
-}
-
-.third-level-menu > li
-{
-    height: 30px;
-    background: #999999;
-}
-.third-level-menu > li:hover { background: #CCCCCC; }
 
 .second-level-menu
 {
@@ -33,7 +15,7 @@
 {
     position: relative;
     height: 30px;
-    background: #999999;
+    background:rgb(12, 100, 159);
 }
 .second-level-menu > li:hover { background: #CCCCCC; }
 
@@ -50,7 +32,7 @@
     float: left;
     height: 30px;
     width: 150px;
-    background: #999999;
+    background:rgb(12, 100, 159);
 }
 .top-level-menu > li:hover { background: #CCCCCC; }
 
@@ -74,4 +56,4 @@
     display: block;
     line-height: 30px;
 }
-.top-level-menu a:hover { color: #000000; }
+.top-level-menu a:hover { color: #00000000; }
