--- a/layout.css
+++ b/layout.css
@@ -17,7 +17,7 @@
     height: 30px;
     background: #999999;
 }
-.second-level-menu > li:hover { background: #CCCCCC; }
+.second-level-menu > li:hover { background:  #c909f9; }
 
 .top-level-menu
 {
