--- a/layout.css
+++ b/layout.css
@@ -56,4 +56,4 @@
     display: block;
     line-height: 30px;
 }
-.top-level-menu a:hover { color: #00000000; }
+.top-level-menu a:hover { color: #000000; }
