--- a/opmaak.css
+++ b/opmaak.css
@@ -107,9 +107,9 @@ margin: 100px; /aanpassingen voor de grootte/
 .third-level-menu > li
 {
     height: 30px;
-    background: #999999;
+    background: rgb(12, 100, 159);
 }
-.third-level-menu > li:hover { background: #CCCCCC; }
+.third-level-menu > li:hover { background:  #c909f9; }
 
 .second-level-menu
 {
@@ -127,9 +127,9 @@ margin: 100px; /aanpassingen voor de grootte/
 {
     position: relative;
     height: 30px;
-    background: #999999;
+    background: rgb(12, 100, 159);
 }
-.second-level-menu > li:hover { background: #CCCCCC; }
+.second-level-menu > li:hover { background:  #c909f9; }
 
 .top-level-menu
 {
@@ -144,9 +144,9 @@ margin: 100px; /aanpassingen voor de grootte/
     float: left;
     height: 30px;
     width: 150px;
-    background: #999999;
+    background: rgb(12, 100, 159;
 }
-.top-level-menu > li:hover { background: #CCCCCC; }
+.top-level-menu > li:hover { background:  #c909f9; }
 
 .top-level-menu li:hover > ul
 {
