--- a/opmaak.css
+++ b/opmaak.css
@@ -144,7 +144,7 @@ margin: 100px; /aanpassingen voor de grootte/
     float: left;
     height: 30px;
     width: 150px;
-    background: rgb(12, 100, 159;
+    background: rgb(12, 100, 159);}
 }
 .top-level-menu > li:hover { background:  #c909f9; }
 
@@ -169,4 +169,5 @@ margin: 100px; /aanpassingen voor de grootte/
     line-height: 30px;
 }
 .top-level-menu a:hover { color: #000000; }
+}
  
