--- a/opmaak.css
+++ b/opmaak.css
@@ -99,7 +99,7 @@ margin: 100px; /aanpassingen voor de grootte/
     left: 0;
     width: 150px;
     list-style: none;
-    padding: 0;
+    padding: 18px 18px;
     margin: 0;
     display: none;
 }
@@ -143,7 +143,7 @@ margin: 100px; /aanpassingen voor de grootte/
     font-family:  Arial, sans-serif;
     color: #FFFFFF;
     text-decoration: none;
-    padding: 0 0 0 10px;
+    padding:18px 18px ;
 
     /* Make the link cover the entire list item-container */
     display: block;
