--- a/opmaak.css
+++ b/opmaak.css
@@ -149,5 +149,5 @@ margin: 100px; /aanpassingen voor de grootte/
     display: block;
     line-height: 30px;
 }
-.top-level-menu a:hover { color: #000000; }
+.top-level-menu a:hover { color: #00000000; }
 
