--- a/opmaak.css
+++ b/opmaak.css
@@ -112,7 +112,7 @@ margin: 100px; /aanpassingen voor de grootte/
 }
 .second-level-menu > li:hover {
 background-color: #c909f9;/* Achtergrondkleur bij hover */
-  color: #ffffff; /* Tekstkleur bij hover */
+  text-decoration-color: #ffffff; /* Tekstkleur bij hover */
   }
 
 .top-level-menu
