--- a/layout.css
+++ b/layout.css
@@ -1,7 +1,7 @@
 /* Dropdown Button */
 .dropbtn {
     background-color: #04AA6D;
-    color: white;
+    color:rgb(12, 100, 159);
     padding: 16px;
     font-size: 16px;
     border: none;
@@ -17,7 +17,7 @@
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f1f1f1;
+    background-color:rgb(12, 100, 159);
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -25,7 +25,7 @@
   
   /* Links inside the dropdown */
   .dropdown-content a {
-    color: black;
+    color: rgba(0, 0, 0, 0);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -38,4 +38,4 @@
   .dropdown:hover .dropdown-content {display: block;}
   
   /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {background-color: #3e8e41;}
+  .dropdown:hover .dropbtn {background-color: rgb(12, 100, 159);}
